Spring tests green